<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"

                xmlns:app="http://schemas.android.com/apk/res/be.fastrada">
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rpmMenu">
        <ProgressBar
                android:id="@+id/rpmIndicator"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:max="2000"
                android:progress="900"
                android:progressDrawable="@drawable/rpmindicator"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RPM"
                android:paddingRight="9dp"
                android:textColor="@color/background"
                android:textSize="15sp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="8dp"
                android:layout_centerInParent="true" android:id="@+id/textView"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meterMenu"
            android:layout_below="@+id/rpmMenu">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:custom="http://schemas.android.com/apk/res/be.fastrada"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="invisible"
                        android:id="@+id/speedMeterBars">
            <be.fastrada.components.Speedometer
                    android:id="@+id/speedometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:currentSpeed="100"
                    custom:maxSpeed="300"
                    />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/speedMeterHolo"
                android:visibility="visible">
            <be.fastrada.components.HoloCircularProgressBar
                    android:id="@+id/speedIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:stroke_width="15dp"
                    app:progress="0.8"
                    app:marker_visible="false"
                    app:progress_color="@android:color/holo_red_dark"
                    app:progress_background_color="#cccccc"
                    app:thumb_visible="false"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                <be.fastrada.components.DigitalTextView
                        android:id="@+id/tvSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="80sp"
                        />
                <be.fastrada.components.DigitalTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed_unit"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tvSpeed"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:custom="http://schemas.android.com/apk/res/be.fastrada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:visibility="invisible"
                        android:id="@+id/tempMeterBars">
            <be.fastrada.components.Speedometer
                    android:id="@+id/tempometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    custom:currentSpeed="100"
                    custom:maxSpeed="300"
                    />
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/tempMeterHolo">
            <be.fastrada.components.HoloCircularProgressBar
                    android:id="@+id/thermometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:stroke_width="17dp"
                    app:progress="0.8"
                    app:marker_visible="false"
                    app:progress_color="@android:color/holo_red_dark"
                    app:progress_background_color="#cccccc"
                    app:thumb_visible="false"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                <be.fastrada.components.DigitalTextView
                        android:id="@+id/tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="80sp"/>
                <be.fastrada.components.DigitalTextView
                        android:id="@+id/tvTempSign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/celcius"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tvTemperature"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/speedMeterHolo"
                android:layout_alignBottom="@+id/speedMeterHolo">
            <ImageView
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:paddingRight="5dp"
                    android:id="@+id/settings"
                    android:src="@android:drawable/ic_menu_preferences"
                    android:contentDescription="@string/settings"
                    android:padding="8dp"
                    android:onClick="onSettingsClick"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"/>
            <ToggleButton
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:id="@+id/tbSendData"
                    android:onClick="onToggleClick"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"/>
            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rlGear"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">
                <be.fastrada.components.DigitalTextView
                        android:id="@+id/tvGear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="50sp"
                        android:layout_centerHorizontal="true"/>
                <be.fastrada.components.DigitalTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gear_text"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tvGear"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>